# smarter-recipes

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  project plan.md
.superpowers/sdd/: progress.md
desktop/: .gitignore  README.md  env-linux.sh  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
desktop/src/: app.ts  bridge.ts  main.ts  nutrition-form.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/tests/visual/: shell.spec.ts
docs/superpowers/plans/: 2026-07-02-recipe-dedup.md  2026-07-03-nutrition-plan-constraints.md  2026-07-03-pantry-quantity-aware-planning.md
docs/superpowers/specs/: 2026-07-03-nutrition-plan-constraints-design.md  2026-07-03-pantry-quantity-aware-planning-design.md  2026-07-03-search-scrape-design.md
examples/: nutrition_bounds.toml
fixtures/: store_catalog.json
recipes/: chicken_rice.json  french_toast.json  garlic_bread.toml  omelette.txt  pancakes.json  tomato_pasta.json
src/: dotenv.rs  lib.rs  main.rs  net.rs  text.rs
src/categorize/: gemini.rs  mod.rs  prompt.rs  vocab.rs
src/cli/: mod.rs
src/domain/: ingredient.rs  mod.rs  nutrition.rs  pantry.rs  plan.rs  recipe.rs  units.rs
src/ingest/: crawl.rs  epub.rs  file.rs  manual.rs  mod.rs  ocr.rs  quality.rs  search.rs  url.rs
src/normalize/: mod.rs  parse.rs  units.rs
src/nutrition/: mod.rs  openfoodfacts.rs  table.rs
src/planning/: ilp.rs  mod.rs  nutrition_bounds.rs  tod.rs
src/pricing/: catalog.rs  density.rs  mod.rs  store.rs
src/shopping/: mod.rs  optimize.rs
src/storage/: mod.rs
tests/: e2e.rs
