[package]
name = "smarter_recipes"
version = "0.1.0"
edition = "2021"
description = "CLI for ingesting recipes, planning meals with ingredient overlap, and optimizing shopping lists"
license = "MIT"
readme = "README.md"
keywords = ["recipes", "meal-planning", "cli", "shopping"]
categories = ["command-line-utilities"]

[[bin]]
name = "smarter-recipes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
scraper = "0.20"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
