[package]
name = "smarter_recipes"
version = "0.1.0"
edition = "2021"
description = "CLI for ingesting recipes, planning meals with minimal distinct ingredients, and optimizing shopping lists"
license = "MIT"
readme = "README.md"
keywords = ["recipes", "meal-planning", "cli", "shopping"]
categories = ["command-line-utilities"]

[[bin]]
name = "smarter-recipes"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
scraper = "0.20"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
highs = "2.3.0"
epub = "2.1.5"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
zip = "2"
