[package]
name = "smarter-recipes-desktop"
version = "0.1.0"
description = "Desktop GUI for smarter-recipes"
authors = ["smarter-recipes"]
edition = "2021"

[lib]
name = "smarter_recipes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
smarter_recipes = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
